# voice-assistant

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
